fix alignment issues, allow adding and viewing of people from inbox view

--- a/xquotient/static/quotient.css
+++ b/xquotient/static/quotient.css
@@ -26,7 +26,7 @@
     padding: 2px;
 }
 
-#message-detail {
+#split-message-detail {
     overflow: auto;
     margin-left: 1%; 
     padding: 0;
